--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,8 @@
 @import url(https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900);
 
 body {
-    font: 500 16px/1.8 'Poppins', sans-serif;
+    /*font: 500 16px/1.8 'Poppins', sans-serif; */
+    font-family:"Exchange Book Regular" !important;
     color: #586377;
     overflow-x: hidden;
 }
