--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,8 @@ a,
 /*** Typography ***/
 
 h1, h2, h3, h4, h5, h6 {
-    font: 700 40px/1.2 'Poppins', sans-serif;
+    /* font: 700 40px/1.2 'Poppins', sans-serif; */
+    font-family:"Exchange Book Regular" !important;
     letter-spacing: 5px;
     margin: 0;
     color: #586377;
