trying exchange book regular font

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,7 +93,8 @@ a,
 
 h1, h2, h3, h4, h5, h6 {
     /* font: 700 40px/1.2 'Poppins', sans-serif; */
-    font-family:"Exchange Book Regular" !important;
+    font: 700 40px/1.2 'Exchange Book Regular', sans-serif;
+    /* font-family:"Exchange Book Regular" !important; */
     letter-spacing: 5px;
     margin: 0;
     color: #586377;
