--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
         <nav class="navbar navbar-expand-lg navbar-custom navbar-light ">
             <div class="container">
 
-                <a class="navbar-brand  mr-auto " href="{{site.baseurl}}/index.html"><img src="{{site.baseurl}}/assets/images/logo.png"></a>
+                <a class="navbar-brand  mr-auto " href="{{site.baseurl}}/index.html"><img src="{{site.baseurl}}/assets/images/logo-mono.png"></a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
